# notebooks

./: .gitignore  README.md  pyproject.toml
kaggle/space-ship-titanic/: space-ship-titanic.ipynb
