[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Project that contains various Jupyter notebooks"
authors = ["Ron Mallory <ronnymallory@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
kaggle = "^1.5.16"
ipykernel = "^6.25.2"
tensorflow = "^2.13.0"
matplotlib = "^3.7.3"
jupyterblack = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
